--- a/config.json
+++ b/config.json
@@ -1,18 +1,15 @@
 {
     "model": {
-        "LLaVA_v1_5_7B_Custom": {
-            "class": "LLaVA",
-            "model_path": "liuhaotian/llava-v1.5-7b",
-            "revision": null,
-            "do_sample": true,
-            "temperature": 0.7
-        }
-    },
+            "Gemini_2_5_Pro": {
+                "class": "Gemini",
+                "model": "gemini-2.5-pro",
+                "temperature": 0.7
+            }
+        },
     "data": {
         "JKTDRIVE_Dataset": {
             "class": "ImageMCQDataset",
             "dataset": "jktdrive",
-            "dataset_dir": "D:\\2. Pre-Thesis\\Evaluation\\VLMEvalKit\\custom_datasets",
             "subset_list": ["jktdrive"]
         }
     }
